# shining-light-backend

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  check_api_response.py  check_relationships.py  check_student_bio.py  cleanup_cross_school_fees.py  cleanup_orphaned_fees.py  create_admin.py  create_practice_exams.py  create_sample_users.py  db.sqlite3  debug_biometrics.py  debug_salary_setup.py  debug_staff_discount.py  diagnose_students.py  docker-compose.yml  ensure_gallery_groups.py  fix_and_recreate_students.py  fix_fee_duplicates.py  fix_migration.py  manage.py  migrate_from_b2.py  open_fees.py  pyproject.toml  pytest.ini  requirements.txt  reset_biometrics.py  seed_fees.py  seed_teachers_to_subjects.py  test_b2_connection.py  test_check.py  test_email_debug.py  test_email_standalone.py  test_fees.py  test_prereq.py  test_receipt.py  (+14 more)
accounts/: admin.py  authentication.py  backends.py  models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_biodata.py  0003_alter_biodata_address_alter_biodata_city_and_more.py  0004_biodata_father_email_biodata_father_name_and_more.py
admission/: admin.py  models.py
admission/migrations/: 0001_initial.py  0002_document.py
api/: admin.py  admin_views.py  authentication.py  permissions.py  signals.py
api/authentication/: __init__.py  backends.py  cbt_session.py
api/migrations/: 0001_initial.py  0002_alter_subjectgroup_code.py  0003_alter_subjectgroup_options_and_more.py  0004_alter_salarygrade_unique_together_and_more.py  0005_remove_staff_staff_school__0f983d_idx_and_more.py  0009_question.py  0013_club.py  (+96 more)
core/: admin.py  apps.py  models.py
serverConfig/: asgi.py  settings.py  urls.py  wsgi.py
tests/: README.md  conftest.py
(+214 files in other folders)
