[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Urkel",email = "abmichael109@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django (>=5.2.1,<6.0.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "dj-rest-auth[with-registration] (>=7.0.1,<8.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "djangorestframework-simplejwt (>=5.5.0,<6.0.0)",
    "django-cors-headers (>=4.7.0,<5.0.0)",
    "python-jose[cryptography] (>=3.4.0,<4.0.0)",
    "dependencies (>=7.7.1,<8.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
